--- a/decks/cs04_2_deck.Rmd
+++ b/decks/cs04_2_deck.Rmd
@@ -185,12 +185,10 @@ This logistic regression gives the probability that any adult will support same-
 
 To complete this method, we need to compute a weighted average of the probabilities from the logistic regression to estimate the proportin of same-sex marriage supporters in each state. First, need to create a prediction for each demographic-state combination (each cell in Census data):
 
-```{r}
+```{r createpred}
 #create a prediction for each cell in Census data
 cellpred <- invlogit(fixef(individual.model)["(Intercept)"]
                      +ranef(individual.model)$race.female[Census$crace.female,1]
-                     +ranef(individual.model)$age.cat[Census$cage.cat,1]
-                     +ranef(individual.model)$edu.cat[Census$cedu.cat,1]
                      +ranef(individual.model)$age.edu.cat[Census$cage.edu.cat,1]
                      +state.ranefs[Census$cstate,1]
                      +ranef(individual.model)$region[Census$cregion,1]   
@@ -208,7 +206,7 @@ y^{MRP}_{s} = \frac{\sum_{c\in s}N_c\theta_c}{\sum_{c \in s} N_c}
 
 More concretely, we would compute this using the following code:
 
-```{r}
+```{r predictions}
 #weights the prediction by the freq of cell                                       
 cellpredweighted <- cellpred * Census$cpercent.state
 
@@ -217,7 +215,7 @@ statepred <- 100* as.vector(tapply(cellpredweighted,Census$cstate,sum))
 statepred
 ```
 
-This result is a set a state-level opinion estimates that you could use to help make predictions regarding the election. 
+This result is a set of state-level opinion estimates that you could use to help make predictions regarding the election. 
 
 ## Bayesian Model
 We could also implement this model using Stan which allows for quantifying model uncertainity. The model specification will be the same our other section, except for some weakly informative priors on the standard deviations of the varying intercepts useful for convergence.
@@ -227,14 +225,12 @@ library(rstan)
 library(brms)
 
 # the model
-bayes.mod <- brm(yes.of.all ~ (1|race.female) + (1|age.cat) + (1|edu.cat)
+bayes.mod <- brm(yes.of.all ~ (1|race.female) 
                  + (1|age.edu.cat) + (1|state) + (1|region)
                  + p.relig.full + p.kerry.full,
                  data=marriage.data, family=bernoulli(),
                  prior=c(set_prior("normal(0,0.2)", class='b'),
                          set_prior("normal(0,0.2)", class='sd', group="race.female"),
-                         set_prior("normal(0,0.2)", class='sd', group="age.cat"),
-                         set_prior("normal(0,0.2)", class='sd', group="edu.cat"),
                          set_prior("normal(0,0.2)", class='sd', group="age.edu.cat"),
                          set_prior("normal(0,0.2)", class='sd', group="state"),
                          set_prior("normal(0,0.2)", class='sd', group="region")))
