--- a/policies.Rmd
+++ b/policies.Rmd
@@ -54,7 +54,7 @@ If you miss class or would like to review the material covered in class, you can
 On the first day of class, we will develop teams of 5-7 students - these teams will stay consistent 
 throughout the semester (barring extraordinary circumstances). You will work in these teams during 
 class and on the five group case studies. The process of forming teams will be completely transparent 
-and based on self-reported data.
+and based on self-reported data. Groups should adhere to specified [group policies](grouppolicies.html).
 
 #### Case studies
 
