--- a/decks/cs04_1_deck.Rmd
+++ b/decks/cs04_1_deck.Rmd
@@ -16,6 +16,11 @@ output:
 ---
 ## Introduction
 
+Use the interesting example from Carl Morris about elections and when you should be more confident...from 779 notes on binomial proportions?
+
+
+## Methods for prediction
+
 We will visit some information sources you may consider when designing your own election prediction strategy. Each source can be used as a starting point, and then expanded upon or combined with another approach, to obtain the best possible prediction.
 
 ## Current Polling Data
