--- a/decks/cs04_2_deck.Rmd
+++ b/decks/cs04_2_deck.Rmd
@@ -212,13 +212,13 @@ cellpredweighted <- cellpred * Census$cpercent.state
 
 #calculates the percent within each state (weighted average of responses)
 statepred <- 100* as.vector(tapply(cellpredweighted,Census$cstate,sum))
-statepred
+cbind(Statelevel$sstate,statepred)
 ```
 
 This result is a set of state-level opinion estimates that you could use to help make predictions regarding the election. 
 
 ## Bayesian Model
-We could also implement this model using Stan which allows for quantifying model uncertainity. The model specification will be the same our other section, except for some weakly informative priors on the standard deviations of the varying intercepts useful for convergence.
+We could also implement this model using Stan, which allows us to quantify uncertainity. The model specification will be the same as in our other section, except for some weakly informative priors in our Bayesian specification. You can read more about the selection of these "default" priors, developed by Andrew Gelman, in the `BRMS` documentation.
 
 ```{r, eval=FALSE, cache = TRUE}
 library(rstan)
@@ -227,12 +227,13 @@ library(brms)
 # the model
 bayes.mod <- brm(yes.of.all ~ (1|race.female) 
                  + (1|age.edu.cat) + (1|state) + (1|region)
-                 + p.relig.full + p.kerry.full,
+                 + (1|poll) + p.relig.full + p.kerry.full,
                  data=marriage.data, family=bernoulli(),
                  prior=c(set_prior("normal(0,0.2)", class='b'),
                          set_prior("normal(0,0.2)", class='sd', group="race.female"),
                          set_prior("normal(0,0.2)", class='sd', group="age.edu.cat"),
                          set_prior("normal(0,0.2)", class='sd', group="state"),
+                         set_prior("normal(0,0.2)", class='sd', group="poll"),
                          set_prior("normal(0,0.2)", class='sd', group="region")))
 
 summary(bayes.mod)
