--- a/cs01.Rmd
+++ b/cs01.Rmd
@@ -29,7 +29,7 @@ library(tidyverse)
 
 - Interim report: produce a 5 page (maximum) report using R markdown that clearly describes your process for model selection and validation. Provide clear interpretations of the associations between each predictor and birth weight in layperson's language, including characterization of uncertainty.  Figures may be included as appropriate. Code should be fully reproducible.
 
-- Final report: produce a 5 page (maximum) report using R markdown that addresses the potential impact of eliminating smoking on birth weight in the population. Clearly describe your modeling approach and any assumptions required to produce estimates. Figures should be included. Code should be fully reproducible.
+- Final report: produce a 5 page (maximum) report using R markdown that addresses the potential impact of eliminating smoking on birth weight in the population. Clearly describe your modeling approach and any assumptions required to produce estimates (including uncertainty characterization). Figures should be included. Code should be fully reproducible.
 
 # Resources
 
