--- a/index.Rmd
+++ b/index.Rmd
@@ -42,7 +42,7 @@ You should have access to a laptop and bring it to every class, fully charged. T
 
 ### Topics and Important Dates
 
-STA 440 contains a mixture of lecture, lab, and combination sessions at the usual class times. Sessions marked "lab" will be taught by TA's and involve hands-on analysis and/or consultation about case studies.
+STA 440 contains a mixture of lecture, lab, and combination sessions at the usual class times. The lecture topics include descriptions of case studies data and highlights of critical issues to consider in analysis of data. The lectures are not designed to dictate your analysis plans -- just to inform them. Sessions marked "lab" will be taught by TA's and involve hands-on analysis and/or consultation about case studies.
 
 Note: this schedule is approximate and is likely to be modified as the course progresses. Readiness assessments will be given without advance notice. Assignments are due at the beginning of class unless otherwise specified. 
 
