--- a/decks/cs03_1_deck.Rmd
+++ b/decks/cs03_1_deck.Rmd
@@ -60,7 +60,7 @@ How does this presentation of rates differ from that at https://schs.dph.ncdhhs.
 Which presentation would you recommend, and why?
 
 ##NC Data on Infant Mortality
-Liz to write, show how to get infant mortality data for NC from birth and death files by county and race.  Note that actual births and deaths cannot be linked, only grouped data.
+These data are not in the public domain but are available on the Sakai website. Note the death data are not available on an individual record level but as counts broken down by year, county, and race/ethnicity.
 
 
 
