--- a/cs02.Rmd
+++ b/cs02.Rmd
@@ -48,6 +48,8 @@ How To Obtain Data from Factbook:
 
 Chapter 11 of Data Science in R: A Case Studies Approach to Computational Reasoning and Problem Solving by Nolan and Temple Lang (free e-book through Duke Libraries)
 
+[Shiny Tutorials](https://shiny.rstudio.com/tutorial/)
+
 [Tableau for Students](https://www.tableau.com/academic/students)
 
 [Introduction to Tableau Video](http://library.capture.duke.edu/Panopto/Pages/Viewer.aspx?id=05708679-00e5-45c3-bb31-fd3724cd8009)
